k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: virallens-inference
  labels:
    app: virallens-inference
spec:
  type: ClusterIP
  selector:
    app: virallens-inference
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
